--- a/app/views/dashboard/_datesearch.html.erb
+++ b/app/views/dashboard/_datesearch.html.erb
@@ -3,7 +3,7 @@
     <div>
       <h1 id="split-amount"></h1>
     </div>
-      <h2>Search</h2>
+      <h2 class="balance-bg-color">Search</h2>
       <%= form_tag(root_path, :method => "get", id: "search-form", class: "my-2 my-lg-0", remote: true) do %>
         <div class="">
           <%= label :date, "From:" %>
