--- a/app/views/dashboard/_maccount_balances.html.erb
+++ b/app/views/dashboard/_maccount_balances.html.erb
@@ -1,7 +1,7 @@
 
   <div id="maccount-balances" class="form-container1">
     <div class="form-container2">
-      <h2>Account Balances</h2>
+      <h2 class="balance-bg-color">Account Balances</h2>
         <table class="table">
           <thead>
             <tr>
