--- a/app/views/dashboard/_piechart.html.erb
+++ b/app/views/dashboard/_piechart.html.erb
@@ -1,10 +1,10 @@
 <div id="pie-chart" class="form-container1">
   <div class="form-container2">
-    <h2>Spending Breakdown</h1>
+    <h2 class="balance-bg-color">Spending Breakdown</h1>
       <% if chart_array == [] %>
         <%= pie_chart chart_array_zero %>
       <% else %>
-        <%= pie_chart chart_array %>    
+        <%= pie_chart chart_array %>
       <% end %>
   </div>
 </div>
