--- a/app/views/dashboard/_spending.html.erb
+++ b/app/views/dashboard/_spending.html.erb
@@ -1,6 +1,6 @@
 <div id="spending-breakdown" class="form-container3">
   <div class="form-container4">
-    <h2>Spending Breakdown</h2>
+    <h2 class="balance-bg-color">Spending Breakdown</h2>
     <table class="table">
       <thead>
         <tr>
