--- a/app/views/dashboard/index.js.erb
+++ b/app/views/dashboard/index.js.erb
@@ -1,4 +1,6 @@
 
 $('.notice').html('<%= j render "dashboard/errors" %>');
 
+$('.notice').html('<%= j render "dashboard/spending_filtered" %>');
+
 $('.modal').show();
