--- a/app/views/mcategories/index.html.erb
+++ b/app/views/mcategories/index.html.erb
@@ -1,31 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Categories</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @mcategories.each do |mcategory| %>
-    <% if current_user.id == mcategory.user_id %>
+<div class="form-container1">
+  <div class="form-container2">
+    <h1>Categories</h1>
+    <table>
+      <thead>
         <tr>
-          <td><%= mcategory.name %></td>
-          <td><%= link_to 'Show', mcategory %></td>
-          <td><%= link_to 'Edit', edit_mcategory_path(mcategory) %></td>
-          <% if mcategory.name != 'paycheck' %>
-          <td><%= link_to 'Destroy', mcategory, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
+          <th>Name</th>
+          <th colspan="3"></th>
         </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
+      </thead>
 
-<br>
+      <tbody>
+        <% @mcategories.each do |mcategory| %>
+        <% if current_user.id == mcategory.user_id %>
+            <tr>
+              <td><%= mcategory.name %></td>
+              <td><%= link_to 'Show', mcategory %></td>
+              <td><%= link_to 'Edit', edit_mcategory_path(mcategory) %></td>
+              <% if mcategory.name != 'paycheck' %>
+              <td><%= link_to 'Destroy', mcategory, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              <% end %>
+            </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
 
-<%= link_to 'New Category', new_mcategory_path %>
+    <br>
+
+    <%= link_to 'New Category', new_mcategory_path %>
+  </div>
+</div>
