--- a/app/views/maccounts/index.html.erb
+++ b/app/views/maccounts/index.html.erb
@@ -1,29 +1,29 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Accounts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @maccounts.each do |maccount| %>
-      <% if current_user.id == maccount.user_id %>
+<div class="form-container1">
+  <div class="form-container2">
+    <h1>Accounts</h1>
+    <table>
+      <thead>
         <tr>
-            <td><%= maccount.name %></td>
-            <td><%= link_to 'Show', maccount %></td>
-            <td><%= link_to 'Edit', edit_maccount_path(maccount) %></td>
-            <td><%= link_to 'Destroy', maccount, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <th>Name</th>
+          <th colspan="3"></th>
         </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Account', new_maccount_path %>
+      </thead>
+      <tbody>
+        <% @maccounts.each do |maccount| %>
+          <% if current_user.id == maccount.user_id %>
+            <tr>
+                <td><%= maccount.name %></td>
+                <td><%= link_to 'Show', maccount %></td>
+                <td><%= link_to 'Edit', edit_maccount_path(maccount) %></td>
+                <td><%= link_to 'Destroy', maccount, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
+    <br>
+    <p> <%= link_to 'New Account', new_maccount_path %></p>
+  </div>
+</div>
