--- a/app/views/maccounts/show.html.erb
+++ b/app/views/maccounts/show.html.erb
@@ -1,11 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<h1>
-  <strong>Name:</strong>
-  <%= @maccount.name %>
-</h1>
+<%= render 'maccounts/checking_breakdown' %>
+<div class="white-space"></div>
 
-<%= render 'mentries/table' %>
+<div class="table-container1">
+  <div class="table-container2">
+    <h1>
+      <strong>Name:</strong>
+      <%= @maccount.name %>
+    </h1>
+    <h2 class="balance-bg-color">
+      <% total = 0 %>
+      <% @maccount.mentries.each do |mentry| %>
+        <% total += mentry.amount %>
+      <% end %>
+      <%= number_to_currency(total) %>
+    </h2>
 
-<%= link_to 'Edit', edit_maccount_path(@maccount) %> |
-<%= link_to 'Back', maccounts_path %>
+    <%= render 'mentries/table' %>
+    <%= link_to 'Edit', edit_maccount_path(@maccount) %> |
+    <%= link_to 'Back', maccounts_path %>
+  </div>
+</div>
