--- a/app/views/mlocations/index.html.erb
+++ b/app/views/mlocations/index.html.erb
@@ -1,29 +1,32 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Locations</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @mlocations.each do |mlocation| %>
-    <% if current_user.id == mlocation.user_id %>
+<div class="form-container1">
+  <div class="form-container2">
+    <h1>Locations</h1>
+    <table>
+      <thead>
         <tr>
-          <td><%= mlocation.name %></td>
-          <td><%= link_to 'Show', mlocation %></td>
-          <td><%= link_to 'Edit', edit_mlocation_path(mlocation) %></td>
-          <td><%= link_to 'Destroy', mlocation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <th>Name</th>
+          <th colspan="3"></th>
         </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
+      </thead>
 
-<br>
+      <tbody>
+        <% @mlocations.each do |mlocation| %>
+        <% if current_user.id == mlocation.user_id %>
+            <tr>
+              <td><%= mlocation.name %></td>
+              <td><%= link_to 'Show', mlocation %></td>
+              <td><%= link_to 'Edit', edit_mlocation_path(mlocation) %></td>
+              <td><%= link_to 'Destroy', mlocation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
 
-<%= link_to 'New Location', new_mlocation_path %>
+    <br>
+
+    <%= link_to 'New Location', new_mlocation_path %>
+  </div>
+</div>
