--- a/app/views/mstatuses/new.html.erb
+++ b/app/views/mstatuses/new.html.erb
@@ -1,6 +1,6 @@
 <div class="form-container1">
   <div class="form-container2">
-    <h1>New Mstatus</h1>
+    <h1>New Status</h1>
     <%= render 'form', mstatus: @mstatus %>
   </div>
 </div>
