--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -6,21 +6,30 @@
     <div class="row">
       <div class="col">
         <%= render 'mentries/form', mentry: @mentry %>
+        <div class="white-space"></div>
       </div>
+
+
       <div class="col">
-        <div class="pie-div">
+        <div>
           <%= render 'dashboard/piechart' %>
         </div>
+        <div class="white-space"></div>
 
-        <div class="white-space">
-
+        <div>
+          <%= render 'dashboard/maccount_balances' %>
         </div>
-        <%= render 'dashboard/maccount_balances' %>
+        <div class="white-space"></div>
+
+        <div>
+          <%= render 'dashboard/spending' %>
+        </div>
       </div>
+
     </div>
   </div>
 
-<hr>
+<!-- <hr>
   <div class="container">
     <div class="row">
       <div class="col">
@@ -30,7 +39,7 @@
         <%= render 'dashboard/spending' %>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <% else %>
     <%= render 'loggedout' %>
