Fixed edit for entry.

--- a/app/views/dashboard/show.js.erb
+++ b/app/views/dashboard/show.js.erb
@@ -12,7 +12,7 @@ $('.close-error-modal').click(function() {
 
 // New Entry Logic
   alert("Your entry was successful!");
-  $('#mentry_amount').val(0);
+  $('#mentry_amount').val(select_amount);
   // $('#mentry_mtype_id').val(4);
   $('#mentry_mstatus_id').val(select_status);
   $('#mentry_maccount_id').val(select_account);
