--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,8 +4,36 @@ src: url('/assets/IkraSlab');
 }
 
 .wrapper1 {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
+}
+
+.header-shadow {
+  box-shadow: 0px 5px 16px -5px #888;
+  border-radius: 5px;
+}
+
+.footer-margin2 {
+  height: 100px;
+}
+
+.header-margin {
+  height: 50px;
+}
+
+.footer-position {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  box-shadow: 0px 5px 16px 5px #888;
+  border-radius: 5px;
+}
+
+.footer-font-style {
+  font-family: 'Ikra Slab';
+  font-size: 16px;
 }
 
 .form-container1 {
