--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,12 @@
     <header>
       <%= render 'layouts/nav'%>
     </header>
+    <div class="header-margin"></div>
     <div class="wrapper1">
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
         <%= yield %>
     </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
