--- a/app/views/mentries/edit.html.erb
+++ b/app/views/mentries/edit.html.erb
@@ -1,6 +1,44 @@
-<h1>Editing Mentry</h1>
+<div class="table-container1">
+  <div class="table-container2">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">###</th>
+          <th scope="col">Status</th>
+          <th scope="col">Amount</th>
+          <th scope="col">Account</th>
+          <th scope="col">Date</th>
+          <th scope="col">Category</th>
+          <th scope="col">Location</th>
+          <th scope="col">Type</th>
+          <th scope="col">Note</th>
+          <th scope="col">Show</th>
+          <th scope="col">Edit</th>
+          <th scope="col">Destroy</th>
+        </tr>
+      </thead>
+      <tbody class="table-row">
+            <tr>
+              <td scope="row"><%= @mentry.id %></td>
+              <td scope="row"><%= @mentry.mstatus.name %></td>
+              <td scope="row"><%= number_to_currency(@mentry.amount) %></td>
+              <td scope="row"><%= @mentry.maccount.name %></td>
+              <td scope="row"><%= @mentry.date %></td>
+              <td scope="row"><%= @mentry.mcategory.name %></td>
+              <td scope="row"><%= @mentry.mlocation.name %></td>
+              <td scope="row"><%= @mentry.mtype.name %></td>
+              <td scope="row"><%= @mentry.note %></td>
+              <td scope="row"><%= link_to 'Show', @mentry %></td>
+              <td scope="row"><%= link_to 'Edit', edit_mentry_path(@mentry) %></td>
+              <td scope="row"><%= link_to 'Destroy', @mentry, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-<%= render 'form', mentry: @mentry %>
+<div class="white-space"></div>
+<%= render 'form_edit2', mentry: @mentry %>
 
 <%= link_to 'Show', @mentry %> |
 <%= link_to 'Back', mentries_path %>
