--- a/app/views/mentries/edit.html.erb
+++ b/app/views/mentries/edit.html.erb
@@ -38,7 +38,7 @@
 </div>
 
 <div class="white-space"></div>
-<%= render 'form_edit2', mentry: @mentry %>
+<%= render 'form_edit', mentry: @mentry %>
 
 <%= link_to 'Show', @mentry %> |
 <%= link_to 'Back', mentries_path %>
