Fixed 'create' validations.

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,8 +1,8 @@
 <!-- link_to current_user.email, edit_user_registration_path -->
 
-<header class="fixed-top header-shadow">
+<header class="fixed-top">
   <% if user_signed_in? %>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light header-shadow">
     <a class="mooostachio-image-header" href="<%= root_path %>">
       <%= image_tag("logo_size_icon_invert.png", width: "40", height: "40", class: "d-inline-block align-top mooostachio-image-header") %>
     </a><span class="brand-font">MOOOSTACH.IO</span>
@@ -67,4 +67,4 @@
     </div>
   </nav>
   <% end %>
-</header>
+<div class="header-margin"></div>
