--- a/app/views/mlocations/edit.html.erb
+++ b/app/views/mlocations/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Mlocation</h1>
 
-<%= render 'form', mlocation: @mlocation %>
 
-<%= link_to 'Show', @mlocation %> |
-<%= link_to 'Back', mlocations_path %>
+<div class="form-container1">
+  <div class="form-container2">
+      <h1>Editing Location</h1>
+        <%= render 'form', mlocation: @mlocation %>
+
+        <%= link_to 'Show', @mlocation %> |
+        <%= link_to 'Back', mlocations_path %>
+  </div>
+</div>
