--- a/app/views/mstatuses/index.html.erb
+++ b/app/views/mstatuses/index.html.erb
@@ -13,12 +13,14 @@
 
       <tbody>
         <% @mstatuses.each do |mstatus| %>
-          <tr>
-            <td><%= mstatus.name %></td>
-            <td><%= link_to 'Show', mstatus %></td>
-            <td><%= link_to 'Edit', edit_mstatus_path(mstatus) %></td>
-            <td><%= link_to 'Destroy', mstatus, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
+          <% if current_user.id == mstatus.user_id %>
+            <tr>
+              <td><%= mstatus.name %></td>
+              <td><%= link_to 'Show', mstatus %></td>
+              <td><%= link_to 'Edit', edit_mstatus_path(mstatus) %></td>
+              <td><%= link_to 'Destroy', mstatus, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
         <% end %>
       </tbody>
     </table>
