--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -60,6 +60,13 @@
           </div>
         </li>
 
+
+      </ul>
+
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to current_user.email, edit_user_registration_path, class: "nav-link" %>
+        </li>
         <li class="nav-item">
           <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
         </li>
@@ -67,4 +74,5 @@
     </div>
   </nav>
   <% end %>
+</header>
 <div class="header-margin"></div>
