Added view by accounts in navbar.

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -31,6 +31,7 @@
             View By
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="<%= maccounts_path %>">Accounts</a>
             <a class="dropdown-item" href="<%= mentries_path %>">Entries</a>
             <a class="dropdown-item" href="<%= mcategories_path %>">Categories</a>
             <a class="dropdown-item" href="<%= mlocations_path %>">Locations</a>
