--- a/app/views/dashboard/_spending_filtered.html.erb
+++ b/app/views/dashboard/_spending_filtered.html.erb
@@ -30,9 +30,9 @@
                       <% end %>
                     <% end %>
                   <% end %>
-                <th scope="row">
+                <td scope="row" align="right">
                     <%= number_to_currency(total * -1) %>
-                </th>
+                </td>
             </tr>
           <% end %>
       </tbody>
