--- a/app/views/maccounts/edit.html.erb
+++ b/app/views/maccounts/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Maccount</h1>
+<div class="form-container1">
+  <div class="form-container2">
+    <h1>Editing Account</h1>
 
-<%= render 'form', maccount: @maccount %>
+    <%= render 'form', maccount: @maccount %>
 
-<%= link_to 'Show', @maccount %> |
-<%= link_to 'Back', maccounts_path %>
+    <%= link_to 'Show', @maccount %> |
+    <%= link_to 'Back', maccounts_path %>
+  </div>
+</div>
