--- a/app/views/dashboard/_entries.html.erb
+++ b/app/views/dashboard/_entries.html.erb
@@ -3,12 +3,13 @@
     <tr>
       <th scope="col">###</th>
       <th scope="col">Amount</th>
-      <th scope="col">Account</th>
+      <th scope="col">Split?</th>
       <th scope="col">Date</th>
+      <th scope="col">Status</th>
+      <th scope="col">Type</th>
+      <th scope="col">Account</th>
       <th scope="col">Category</th>
       <th scope="col">Location</th>
-      <th scope="col">Type</th>
-      <th scope="col">Status</th>
       <th scope="col">Note</th>
       <th scope="col"></th>
       <th scope="col"></th>
@@ -20,13 +21,14 @@
     <% if current_user.id == mentry.user_id %>
         <tr>
           <td scope="row"><%= link_to mentry.id, mentry_path(mentry.id) %></td>
-          <td scope="row"><%= number_to_currency(mentry.amount) %></td>
-          <td scope="row"><%= mentry.maccount.name %></td>
+          <td scope="row" align="right"><%= number_to_currency(mentry.amount) %></td>
+          <td scope="row"><%= mentry.split %></td>
           <td scope="row"><%= mentry.date %></td>
+          <td scope="row"><%= mentry.mstatus.name %></td>
+          <td scope="row"><%= mentry.mtype.name %></td>
+          <td scope="row"><%= mentry.maccount.name %></td>
           <td scope="row"><%= mentry.mcategory.name %></td>
           <td scope="row"><%= mentry.mlocation.name %></td>
-          <td scope="row"><%= mentry.mtype.name %></td>
-          <td scope="row"><%= mentry.mstatus.name %></td>
           <td scope="row"><%= mentry.note %></td>
           <td scope="row"><%= link_to 'Edit', edit_mentry_path(mentry) %></td>
           <td scope="row"><%= link_to 'X', mentry, method: :delete, data: { confirm: 'Are you sure?' } %></td>
