--- a/app/views/dashboard/_maccount_balances.html.erb
+++ b/app/views/dashboard/_maccount_balances.html.erb
@@ -6,7 +6,7 @@
           <thead>
             <tr>
               <th scope="col">Account</th>
-              <th scope="col">Balance</th>
+              <th scope="col" class="right-align">Balance</th>
             </tr>
           </thead>
           <tbody class="table-row">
@@ -18,7 +18,7 @@
                       <% maccount.mentries.each do |mentry| %>
                         <% total += mentry.amount %>
                       <% end %>
-                      <th scope="row"><%= number_to_currency(total) %></th>
+                      <td scope="row" align="right"><%= number_to_currency(total) %></td>
                   <% end %>
               <% end %>
                   </tr>
