--- a/app/views/dashboard/_spending.html.erb
+++ b/app/views/dashboard/_spending.html.erb
@@ -5,7 +5,7 @@
       <thead>
         <tr>
           <th scope="col">Category</th>
-          <th scope="col">Total</th>
+          <th scope="col" class="right-align">Total</th>
         </tr>
       </thead>
       <tbody class="table-row">
@@ -28,9 +28,9 @@
                         <% end %>
                     <% end %>
                   <% end %>
-                <th scope="row">
+                <td scope="row" align="right">
                     <%= number_to_currency(total * -1) %>
-                </th>
+                </td>
 
             <% end %>
             </tr>
