--- a/app/views/maccounts/_checking_breakdown.html.erb
+++ b/app/views/maccounts/_checking_breakdown.html.erb
@@ -12,17 +12,14 @@
       <thead>
         <tr>
           <th scope="col">Category</th>
-          <th scope="col">Total</th>
+          <th scope="col" class="right-align">Total</th>
         </tr>
       </thead>
       <tbody class="table-row">
           <% cat_not_zero.each do |mcategory| %>
             <tr>
-
                 <th scope="row">
-
                     <%= link_to mcategory.name, mcategory_path(mcategory.id) %>
-
                 </th>
                   <% total = 0 %>
                   <% mcategory.mentries.each do |entry| %>
@@ -32,9 +29,9 @@
                       <% end %>
                     <% end %>
                   <% end %>
-                <th scope="row">
+                <td scope="row" align="right">
                     <%= number_to_currency(total) %>
-                </th>
+                </td>
             <% end %>
             </tr>
       </tbody>
