More work on moose animation.

--- a/app/views/dashboard/show.js.erb
+++ b/app/views/dashboard/show.js.erb
@@ -48,10 +48,12 @@ $('.close-error-modal').click(function() {
 
   $( '#moose-image' ).animate({
     width: "350px",
-    right: "-75px"
+    right: "-75px",
+    bottom: "-75px"
   }, 500)
 
   $( '#moose-image' ).animate({
     width: "300px",
-    right: "-125px"
+    right: "-175px",
+    bottom: "-125px"
   }, 500).delay(1000)
