README update and button color update.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -136,7 +136,7 @@ h2 {
 }
 
 .balance-bg-color {
-  background-color: #41DCF0;
+  background-color: #55DFC3;
   padding: 8px;
 }
 
@@ -149,4 +149,8 @@ h2 {
   position: fixed;
   bottom: -125px;
   right: -175px;
+}
+
+.btn {
+  color: #55DFC3;
 }
