--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -28,7 +28,7 @@ a {
 
   &:hover {
     color: #fff;
-    background-color: #41DCF0;
+    background-color: #55DFC3;
     text-decoration: none;
   }
 }
