--- a/app/views/mentries/_split.html.erb
+++ b/app/views/mentries/_split.html.erb
@@ -69,7 +69,7 @@
               </div>
 
               <div class="actions">
-                <%= form.submit "Split", id: "transfer-btn", class: "btn btn-outline-success my-2 my-sm-0" %>
+                <%= form.submit "Split", id: "transfer-btn", class: "btn btn-outline-dark my-2 my-sm-0" %>
               </div>
             <% end %>
         <% end %>
