--- a/app/views/dashboard/_datesearch.html.erb
+++ b/app/views/dashboard/_datesearch.html.erb
@@ -17,7 +17,7 @@
         </div>
         <div>
           <span class="input-group-btn">
-            <%= submit_tag "Search", class: 'btn btn-outline-success my-2 my-sm-0' %>
+            <%= submit_tag "Search", class: 'btn btn-outline-dark my-2 my-sm-0' %>
           </span>
         </div>
       <% end %>
