--- a/app/views/mentries/_form.html.erb
+++ b/app/views/mentries/_form.html.erb
@@ -71,7 +71,7 @@
               </div>
 
               <div class="actions">
-                <%= form.submit "Create Entry", id: "transfer-btn", class: "btn btn-outline-success my-2 my-sm-0" %>
+                <%= form.submit "Create Entry", id: "transfer-btn", class: "btn btn-outline-dark my-2 my-sm-0" %>
               </div>
             <% end %>
         <% end %>
