--- a/app/views/mtypes/_form.html.erb
+++ b/app/views/mtypes/_form.html.erb
@@ -17,6 +17,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Create Transaction Type", class: "btn btn-outline-success my-2 my-sm-0" %>
+    <%= form.submit "Create Transaction Type", class: "btn btn-outline-dark my-2 my-sm-0" %>
   </div>
 <% end %>
