--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,8 @@
 @font-face {
-  font-family: "Ikra Slab";
-src: url('./assets/IkraSlab');
+  font-family: 'Ikra Slab';
+  src: asset-url('IkraSlab');
+  src: asset-url('IkraSlab.ttf?#iefix') format('embedded-opentype'), 
+       asset-url('IkraSlab.ttf') format('truetype');
 }
 
 .wrapper1 {
