--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link href="https://fonts.googleapis.com/css?family=Caveat|IBM+Plex+Serif|Roboto+Mono" rel="stylesheet">
+    <%= favicon_link_tag asset_path('logo_size_icon_invert.png') %>
 
     </script>
   </head>
