Moose image placement.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -30,6 +30,9 @@
     </div>
   </div>
 
+  <div>
+      <%= image_tag("logo_size_icon.png", class: "moose-image", id: "moose-image") %>
+  </div>
 
   <% else %>
     <%= render 'loggedout' %>
