--- a/app/views/dashboard/_loggedout.html.erb
+++ b/app/views/dashboard/_loggedout.html.erb
@@ -1,3 +1,7 @@
 <h1>Welcome to Mooostach.io</h1>
     <%= link_to 'Register', new_user_registration_path, method: :get %>
     <%= link_to 'Login', new_user_session_path, method: :get %>
+
+    <div>
+        <%= image_tag("logo_size_icon.png", class: "moose-image", id: "moose-image") %>
+    </div>
