--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,6 +28,10 @@
       </div>
     <% end %>
 
+    <div>
+        <%= image_tag("logo_size_icon.png", class: "moose-image", id: "moose-image") %>
+    </div>
+    
     <%= render "devise/shared/links" %>
   </div>
 </div>
